--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,9 @@ application.args=c 0
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.mysql-connector-java-5.1.10-bin.jar=/home/pault/Projects/lib
+file.reference.TCM_UTILS.jar=/home/pault/Projects/lib
 javac.debug=true
 javadoc.preview=true
-jaxbwiz.endorsed.dirs=/home/khaya/netbeans-6.8/ide12/modules/ext/jaxb/api
-user.properties.file=/home/khaya/.netbeans/6.8/build.properties
+jaxbwiz.endorsed.dirs=/home/pault/netbeans-6.8/ide12/modules/ext/jaxb/api
+user.properties.file=/home/pault/.netbeans/6.8/build.properties
