--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,11 +24,12 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-5.1.10-bin.jar=/home/khaya/NetBeansProjects/voxzalcrm/lib/mysql-connector-java-5.1.10-bin.jar
 file.reference.TCM_UTILS.jar=/home/khaya/NetBeansProjects/voxzalcrm/lib/TCM_UTILS.jar
+file.reference.TCM_UTILS.jar-1=/home/pault/Projects/lib/libs/TCM_UTILS.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.10-bin.jar}:\
-    ${file.reference.TCM_UTILS.jar}
+    ${file.reference.TCM_UTILS.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
