--- a/voxzal.config
+++ b/voxzal.config
@@ -1,3 +1,3 @@
 user=root
-password=root
-url=jdbc:mysql://localhost:3306/DataPro_Master
+password=devdb97531
+url=jdbc:mysql://localhost:3306/DataPro_Master?rewriteBatchedStatements=true
